--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "ejs": "^3.1.9",
     "express": "^4.18.2",
     "express-session": "^1.17.3",
+    "mongoose": "^6.10.1",
     "morgan": "^1.10.0",
     "nodemailer": "^6.9.5"
   }
